change landing, gototop cursor, footer left align

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <section class = "landing-wrapper">
       <div class="landing-content">
-      <h1>Mike Grail</h1>
+      <h1 id = "Mike">Mike</h1>
+      <h1 id = "Grail">&nbsp;Grail</h1>
       </div>
-
     </section>
     
     <section class="main-wrapper" id="mainSite">
