--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
     <section class = "landing-wrapper">
       <div class="landing-content">
-      <h1 id = "Mike">Mike</h1>
-      <h1 id = "Grail">&nbsp;Grail</h1>
+        <h1 id = "Mike">Mike</h1>
+        <h1 id = "Grail">&nbsp;Grail</h1>
+      </div>
+      <div class="down-arrow" id="downArrow">
+        ↓
       </div>
     </section>
     
