about + instagram link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
     
     <section class="main-wrapper" id="mainSite">
       <div class = "header">
-        <h2 id = "goToTop">Mike Grail</h2>
+        <h2 id = "goToTop">Mike Grail&nbsp;</h2>
+        <div class = "bracket-links">
+          <a href = "pages/about.html">
+            <p>[About]</p>
+          </a>
+          <a target = "_blank" href = "https://www.instagram.com/michael__ry_/">
+            <p>[Instagram]</p>
+          </a>
+        </div>
       </div>
       <div class="content">
         <div class = "gallery">
@@ -86,7 +94,9 @@
         </div>
       </div>
       <div class = "footer">
-        <h4>© 2025 Mike Grail</h4>
+        <h4>© 2025 Mike Grail<br>
+            Made by <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a> 
+        </h4>
       </div>
     </section>
   </body>
