--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </div>
       </div>
       <div class = "footer">
-        <h4>© 2025 Mike Grail<br>
-            Made by <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a> 
+        <h4>
+            Made by <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025.
         </h4>
       </div>
     </section>
