--- a/index.html
+++ b/index.html
@@ -42,46 +42,46 @@
       <div class="content">
         <div class = "gallery">
           <video preload = "none" 
-            src="https://de1wwae7728z6.cloudfront.net/videos/klee/16x9_promo.mp4" 
+            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
             data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
             muted autoplay loop>
           </video>
 
           <img loading = "lazy"
-            src="https://de1wwae7728z6.cloudfront.net/images/paint/michael.jpg" 
+            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
             data-desc="ANOTHER ITEM–sample text–hiiiii"
           />
 
           <video preload = "none" 
-            src="https://de1wwae7728z6.cloudfront.net/videos/klee/16x9_promo.mp4" 
+            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
             data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
             muted autoplay loop>
           </video>
 
           <video preload = "none" 
-            src="https://de1wwae7728z6.cloudfront.net/videos/klee/16x9_promo.mp4" 
+            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
             data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
             muted autoplay loop>
           </video>
 
           <img loading = "lazy"
-            src="https://de1wwae7728z6.cloudfront.net/images/paint/michael.jpg" 
+            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
             data-desc="ANOTHER ITEM–sample text–hiiiii"
           />
 
           <img loading = "lazy"
-            src="https://de1wwae7728z6.cloudfront.net/images/paint/michael.jpg" 
+            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
             data-desc="ANOTHER ITEM–sample text–hiiiii"
           />
 
           <video preload = "none" 
-            src="https://de1wwae7728z6.cloudfront.net/videos/klee/16x9_promo.mp4" 
+            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
             data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
             muted autoplay loop>
           </video>
 
           <img loading = "lazy"
-            src="https://de1wwae7728z6.cloudfront.net/images/paint/michael.jpg" 
+            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
             data-desc="ANOTHER ITEM–sample text–hiiiii"
           />
         </div>
