toggle description, that's right i'm mike.

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,8 +19,8 @@
   <body>
     <section class = "landing-wrapper">
       <div class="landing-content">
-        <h1 id = "Mike">About</h1>
-        <h1 id = "Grail">&nbsp;Me</h1>
+        <h1 id = "Thats-Right">That's Right,</h1>
+        <h1 id = "Im-Mike">&nbsp;I'm Mike.</h1>
       </div>
       <div class="down-arrow" id="downArrow">
         ↓
@@ -44,13 +44,38 @@
       <div class="content">
         <div class = "about">
             <img loading = "lazy"
-            src="https://de1wwae7728z6.cloudfront.net/images/paint/michael.jpg" 
+            src="https://i.pinimg.com/736x/18/9b/eb/189beb84547654a6ca6d16a31ad36a81.jpg" 
             />
         </div>
-        <div class = "description">
-            <p>Hi, I'm Mike. CHeck out my grails.</p>
+        <div>
+          <div id = "bio-j">
+              <p>
+                Hi, I'm Mike.
+                <br><br>
+                I love dancing, money, and spending money. Hence, this website
+                was made to show-off my grails with the world. There are a lot of ugly
+                things present in the world, and this is my contribution to 
+                reconciling that imbalance. /j
+              </p>
+          </div>
+          <div id = "bio-srs" style="display: none;">
+              <p>
+                Hi, I'm Michael Yang. 
+                <br><br>
+                I've always had a keen eye for beautiful things, whether they 
+                were everyday objects of the most mundane moments or the most 
+                rare and extraordinary phenomena.
+                <br><br>
+                Now that I have the time and means to be more intentional about 
+                what I collect, this website serves as a repository to share my 
+                finds with you. 
+              </p>
+          </div>
+          <div class="toggle-btn-wrapper">
+            <button id="toggleBtn">[SWITCH]</button>
+          </div>
         </div>
-      </div>
+        
       <div class = "footer">
         <h4>
             Made by <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025.
