--- a/pages/about.html
+++ b/pages/about.html
@@ -42,9 +42,14 @@
         </div>
       </div>
       <div class="content">
-        <div class = "about">
+        <div class = "about" id = "img-j">
             <img loading = "lazy"
             src="https://i.pinimg.com/736x/18/9b/eb/189beb84547654a6ca6d16a31ad36a81.jpg" 
+            />
+        </div>
+        <div class = "about" id = "img-srs" style="display: none;">
+            <img loading = "lazy"
+            src="https://i.pinimg.com/1200x/1e/af/88/1eaf88423b1c0e26f93e50a3bec93825.jpg" 
             />
         </div>
         <div>
