--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
       <div class = "footer">
         <h4>
-            Made by <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025.
+            <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025
         </h4>
       </div>
     </section>
