--- a/pages/about.html
+++ b/pages/about.html
@@ -77,13 +77,16 @@
               </p>
           </div>
           <div class="toggle-btn-wrapper">
-            <button id="toggleBtn">[SWITCH]</button>
+            <h4>
+              <button id="toggleBtn">[SWITCH]</button>
+
+            </h4>
           </div>
         </div>
         
       <div class = "footer">
         <h4>
-            Made by <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025.
+            <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025
         </h4>
       </div>
     </section>
