some images + text

--- a/index.html
+++ b/index.html
@@ -41,49 +41,51 @@
       </div>
       <div class="content">
         <div class = "gallery">
-          <video preload = "none" 
-            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
-            data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
-            muted autoplay loop>
-          </video>
-
           <img loading = "lazy"
-            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
-            data-desc="ANOTHER ITEM–sample text–hiiiii"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/snufkin_main.jpg" 
+            data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
           />
 
-          <video preload = "none" 
-            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
-            data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
-            muted autoplay loop>
-          </video>
-
-          <video preload = "none" 
-            src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
-            data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
-            muted autoplay loop>
-          </video>
-
           <img loading = "lazy"
-            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/century_main.jpg" 
             data-desc="ANOTHER ITEM–sample text–hiiiii"
           />
 
           <img loading = "lazy"
-            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
-            data-desc="ANOTHER ITEM–sample text–hiiiii"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/type_i_main.jpg" 
+            data-desc="Kapital Type I Jacket–sample text–hiiiii"
           />
 
-          <video preload = "none" 
+          <img loading = "lazy"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/yang_hat_main.jpg" 
+            data-desc="杨 hat–sample text–hiiiii"
+          />
+
+          <img loading = "lazy"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/brown_main.jpg" 
+            data-desc="Brown Pants–sample text–hiiiii"
+          />
+
+          <img loading = "lazy"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/plaid_ltttt_main.jpg" 
+            data-desc="Plaid LTTTT Pants–sample text–hiiiii"
+          />
+
+          <img loading = "lazy"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/orange_asics_main.jpg" 
+            data-desc="Asics x LTTTT Orange Pants–sample text–hiiiii"
+          />
+
+          <img loading = "lazy"
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/cdg_detail.jpg" 
+            data-desc="CDG Knit Top–sample text–hiiiii"
+          />
+
+          <!-- <video preload = "none" 
             src="https://progressive-cdn.ustudio.com/ustudio/app/transcodes/TzaAoH0c6G1T.mp4"
             data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
             muted autoplay loop>
-          </video>
-
-          <img loading = "lazy"
-            src="https://i.pinimg.com/736x/5f/a1/69/5fa1697edbb7b59a3bb736feee3e79bc.jpg" 
-            data-desc="ANOTHER ITEM–sample text–hiiiii"
-          />
+          </video> -->
         </div>
         <div class = "description">
           <div class = "asset-desc"><h3>NAME</h3><p>desc</p></div>
