--- a/pages/about.html
+++ b/pages/about.html
@@ -44,12 +44,12 @@
       <div class="content">
         <div class = "about" id = "img-j">
             <img loading = "lazy"
-            src="https://i.pinimg.com/736x/18/9b/eb/189beb84547654a6ca6d16a31ad36a81.jpg" 
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/about_j.jpg" 
             />
         </div>
         <div class = "about" id = "img-srs" style="display: none;">
             <img loading = "lazy"
-            src="https://i.pinimg.com/1200x/1e/af/88/1eaf88423b1c0e26f93e50a3bec93825.jpg" 
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/about_srs.jpg" 
             />
         </div>
         <div>
@@ -77,10 +77,7 @@
               </p>
           </div>
           <div class="toggle-btn-wrapper">
-            <h4>
-              <button id="toggleBtn">[SWITCH]</button>
-
-            </h4>
+            <button id="toggleBtn">[SWITCH]</button>
           </div>
         </div>
         
