--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class = "gallery">
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/snufkin_main.jpg" 
-            data-desc="KAPITAL #6 COTTON CANVAS SNUFKIN BAG CAMEL–sample text–hiiiii"
+            data-desc="Kapital #6 Cotton Canvas Snufkin Bag Camel–Sally and Suanna kindly gifted me this bag to celebrate my graduation (June 2025). While I am really thankful for my friends, this was a bit excessive. Since my first trip to Japan, I had been eyeing the bag but I had already dropped a bag on a jacket so I couldn’t justify dropping another bag on this bag. 
+
+Regardless, I love how interactive this bag is - it comes flat and you fasten three buckles to make it functional. It holds a lot of things, more than I expected. I am afraid to get it dirty because it is a light color. The bag was purchased from Grailed. "
           />
 
           <img loading = "lazy"
