--- a/index.html
+++ b/index.html
@@ -50,32 +50,42 @@
 
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/century_main.jpg" 
-            data-desc="ANOTHER ITEM–sample text–hiiiii"
+            data-desc="Century Denim No.9 Book Bag
+            –I got this bag at the 2nd Street in Costa Mesa at The Camp, which is one of my favorite stores. I was with Sally on a trip to OC. It was an impulse purchase because I had never actually seen the bag before but I am glad I got it. It has Kapital’s signature sashiko stitching all throughout which adds a really nice texture. I got it for quite a good price (compared to retail in the US). 
+            –Before purchasing it, I FaceTimed Suanna and Teresa, and only Suanna was in support of me getting it. Sally really wanted me to get it because she knew if I didn’t get the bag I wouldn’t stop talking about it all night and she did NOT want to hear any of that. I am glad she had that sentiment. I have had this bag since January 2025. It goes with basically every outfit and is loud enough to let those who know that I am flexing on them, but subtle enough that the big graphic words make an otherwise plain outfit interesting to the average person. "
           />
 
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/type_i_main.jpg" 
-            data-desc="Kapital Type I Jacket–sample text–hiiiii"
+            data-desc="Kapital Twill Aging-Wool 1st Jacket - Faded Charcoal
+            –This was my first Kapital piece. I bought it at the Tokyo Naked Store. I had gone to Japan with the intention of finding something in the neighborhood of a denim jacket and when I came across this one, I knew it was the one. The sales associate definitely played some tricks to get me to buy it - he said it was the only one of this size left in stores (my size was in stock online) (but I guess I couldn’t have it shipped to me anyways because we were only in Japan for a couple more days) but I do not blame him one bit. Modeled after the Levi’s Type 1 jacket, it has all the characteristics of the jean jacket I was looking for but with a bit more warmth and less hill billy energy that fits better into my style. I have had this jacket since December 2024. I love the “contrast stitching” around all the hems that give it this sort of aged look without being worn. I am scared to get it wet because it is made of wool and I was caught in the rain with it once without an umbrella. Luckily I escaped and the jacket is fine. I hope I never have to wash it. "
           />
 
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/yang_hat_main.jpg" 
-            data-desc="杨 hat–sample text–hiiiii"
+            data-desc="杨 hat
+            –Suanna knitted me this hat. The Chinese character on its face is my last name. She began working on this project ages ago - at this point I do not remember when. Again, I am so thankful for my friends because the time, energy, and thought that went into this is priceless. The colors on it are so fun but still subdued in a way that makes it possible to style with many different types of outfits. I love the texture that the mohair creates and the construction of it (not pictured but you just have to believe me). I also love how cool it makes my last name look. Growing up I didn’t like how my last name sounded in English nor did I really like it in Chinese because it is homophones with the word for sheep. But it looks so dope on this hat. I can’t wait to wear it when it’s colder/when I move to New York. I have had this hat since August 2025."
           />
 
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/brown_main.jpg" 
-            data-desc="Brown Pants–sample text–hiiiii"
+            data-desc="Needles H.D. Track Pant in Poly Smooth Dark Brown
+            –sample text
+            –hiiiii"
           />
 
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/plaid_ltttt_main.jpg" 
-            data-desc="Plaid LTTTT Pants–sample text–hiiiii"
+            data-desc="LTTT Bungee Pants V.3 - Black
+            –sample text
+            –hiiiii"
           />
 
           <img loading = "lazy"
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/orange_asics_main.jpg" 
-            data-desc="Asics x LTTTT Orange Pants–sample text–hiiiii"
+            data-desc="LTTT - ASICS Training Pant - Orange
+            –sample text
+            –hiiiii"
           />
 
           <img loading = "lazy"
