about desc and toggle btn

--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@
         </div>
         <div class = "about" id = "img-srs" style="display: none;">
             <img loading = "lazy"
-            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/about_srs.jpg" 
+            src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/about_s.jpeg" 
             />
         </div>
         <div>
@@ -57,10 +57,7 @@
               <p>
                 Hi, I'm Mike.
                 <br><br>
-                I love dancing, money, and spending money. Hence, this website
-                was made to show-off my grails with the world. There are a lot of ugly
-                things present in the world, and this is my contribution to 
-                reconciling that imbalance. /j
+                There are two things I am rather good at: dancing and spending money. You can decide which one I am better at. This website was made so that I can flex on all my haters. There are a lot of ugly things in this world, but my consumption only aims to fuels the beautiful parts and that is my life’s contribution. I do not use Head & Shoulders. /j
               </p>
           </div>
           <div id = "bio-srs" style="display: none;">
