--- a/pages/about.html
+++ b/pages/about.html
@@ -62,15 +62,12 @@
           </div>
           <div id = "bio-srs" style="display: none;">
               <p>
-                Hi, I'm Michael Yang. 
+                Hi, I'm Michael.
                 <br><br>
-                I've always had a keen eye for beautiful things, whether they 
-                were everyday objects of the most mundane moments or the most 
-                rare and extraordinary phenomena.
+                I have always had an eye for beautiful things - whether they be incredible moments of design history, laboriously handcrafted garments, extraordinary natural phenomena, or just plain everyday objects.
                 <br><br>
-                Now that I have the time and means to be more intentional about 
-                what I collect, this website serves as a repository to share my 
-                finds with you. 
+                In a world of fast moving trends and overconsumption, I am working to be more intentional about what I collect, investing in life long pieces that this website serves as a repository to share my finds with you.
+                
               </p>
           </div>
           <div class="toggle-btn-wrapper">
