--- a/pages/about.html
+++ b/pages/about.html
@@ -66,8 +66,7 @@
                 <br><br>
                 I have always had an eye for beautiful things - whether they be incredible moments of design history, laboriously handcrafted garments, extraordinary natural phenomena, or just plain everyday objects.
                 <br><br>
-                In a world of fast moving trends and overconsumption, I am working to be more intentional about what I collect, investing in life long pieces that this website serves as a repository to share my finds with you.
-                
+                In a world of fast moving trends and overconsumption, I am working to be more intentional about what I collect, investing in life long pieces that I know I will cherish forever. Updating this website periodically not only is a small nod to this shift in attitude but also serves as a way to look back on the stories each piece holds. 
               </p>
           </div>
           <div class="toggle-btn-wrapper">
