--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <h4>
             <a target ="_blank" href = "https://suannazhong.com">Suanna Zhong</a>, 2025
         </h4>
+        <button id="topBtn">[BACK TO TOP]</button>
       </div>
     </section>
   </body>
