--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/snufkin_main.jpg" 
             data-alt-srcs="https://de1wwae7728z6.cloudfront.net/images/mike-grail/snufkin_detail.jpg"
 
-            data-desc="lalalala Kapital No. 6 Canvas Snufkin Bag - Kinari
+            data-desc="Kapital No. 6 Canvas Snufkin Bag - Kinari
             –Sally and Suanna kindly gifted me this bag to celebrate my graduation. While I am really thankful for my friends, this was a bit excessive. Since my first trip to Japan, I had been eyeing the bag but I had already dropped a bag on a jacket during that trip so I couldn’t justify dropping another bag on this bag. 
 
             –Regardless, I love how interactive this bag is - it comes flat and you fasten three buckles to make it functional. It holds a lot of things, more than I expected. I am afraid to get it dirty because it is a light color. The bag was purchased from Grailed. I have had this bag since June 2025.
