--- a/pages/about.html
+++ b/pages/about.html
@@ -57,7 +57,7 @@
               <p>
                 Hi, I'm Mike.
                 <br><br>
-                There are two things I am rather good at: dancing and spending money. You can decide which one I am better at. This website was made so that I can flex on all my haters. There are a lot of ugly things in this world, but my consumption only aims to fuels the beautiful parts and that is my life’s contribution. I do not use Head & Shoulders. /j
+                There are two things I am rather good at: dancing and spending money. You can decide which one I am better at. This website was made so that I can flex on all my haters. There are a lot of ugly things in this world, but my consumption only aims to fuel the beautiful parts and that is my life’s contribution. I do not use Head & Shoulders. /j
               </p>
           </div>
           <div id = "bio-srs" style="display: none;">
@@ -66,7 +66,7 @@
                 <br><br>
                 I have always had an eye for beautiful things - whether they be incredible moments of design history, laboriously handcrafted garments, extraordinary natural phenomena, or just plain everyday objects.
                 <br><br>
-                In a world of fast moving trends and overconsumption, I am working to be more intentional about what I collect, investing in life long pieces that I know I will cherish forever. Updating this website periodically not only is a small nod to this shift in attitude but also serves as a way to look back on the stories each piece holds. 
+                In a world of fast moving trends and overconsumption, I am working to be more intentional about what I collect, investing in lifelong pieces that I know I will cherish forever. Updating this website periodically not only is a small nod to this shift in attitude but also serves as a way to look back on the stories each piece holds. 
               </p>
           </div>
           <div class="toggle-btn-wrapper">
