--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </video> -->
         </div>
         <div class = "description">
-          <div class = "asset-desc"><h3>NAME</h3><p>desc</p></div>
+          <div class = "asset-desc"><p>Hover on images</p></div>
         </div>
       </div>
       <div class = "footer">
