--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="/site.webmanifest" />
 
     <title>Mike Grail</title>
 
@@ -14,6 +13,11 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="https://de1wwae7728z6.cloudfront.net/images/mike-grail/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://de1wwae7728z6.cloudfront.net/images/mike-grail/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://de1wwae7728z6.cloudfront.net/images/mike-grail/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
   </head>
   <body>
