--- a/pages/about.html
+++ b/pages/about.html
@@ -47,12 +47,12 @@
       </div>
       <div class="content">
         <div class = "about" id = "img-j">
-            <img loading = "lazy"
+            <img 
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/about_j.jpg" 
             />
         </div>
         <div class = "about" id = "img-srs" style="display: none;">
-            <img loading = "lazy"
+            <img 
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/about_s.jpeg" 
             />
         </div>
