--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="content">
         <div class = "gallery">
-          <img 
+          <!-- <img 
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/kapital_grad_main.jpg" 
             data-alt-srcs="https://de1wwae7728z6.cloudfront.net/images/mike-grail/kapital_grad_detail.jpg"
             
@@ -93,7 +93,7 @@
             –I tried this pair on at the Shenzhen location. They also had a pair of the Margiela collaboration (M113 I believe) in stock and I was very tempted to get those. Virtually no one who voted on my Instagram poll (between these and the Margielas) liked the Margiela on me so I ended up not getting them. I passed on this pair my first visit but I went back the next day to purchase them. This particular model is not made anymore and was priced slightly under retail so I thought I was getting a good deal.
             
             –The lenses on these glasses are not prescription. I have had these glasses since September 2025. 
-          "/>
+          "/> -->
 
           <img 
             src="https://de1wwae7728z6.cloudfront.net/images/mike-grail/yang_hat_main.jpg" 
